force-app/main/default/objects/CampaignMember/fields/TwilioSF__Has_Mobile_Number__c.field-meta.xml
<CustomField>
    <fullName>TwilioSF__Has_Mobile_Number__c</fullName>
    <formula>NOT(ISBLANK(Contact.MobilePhone)) ||  NOT(ISBLANK(Lead.MobilePhone))</formula>
    <label>Has Mobile Number</label>
    <type>Checkbox</type>
</CustomField>