force-app/main/default/objects/CampaignMember/fields/TwilioSF__Last_Message_Status__c.field-meta.xml
<CustomField>
    <fullName>TwilioSF__Last_Message_Status__c</fullName>
    <formula>IF(
  LeadId != null,
    IF(TEXT(Lead.TwilioSF__Last_Message_Status__c) != null,
      TEXT(Lead.TwilioSF__Last_Message_Status__c),
        IF(ISBLANK(Lead.MobilePhone),
          &apos;missing mobile number&apos;,
          &apos;unknown&apos;
          )
        ),
  IF(
    ContactId != null,
      IF(TEXT(Contact.TwilioSF__Last_Message_Status__c) != null,
        TEXT(Contact.TwilioSF__Last_Message_Status__c),
        IF(ISBLANK(Contact.MobilePhone),
          &apos;missing mobile number&apos;,
          &apos;unknown&apos;
          )
        ), 
      &apos;unknown&apos;
      )
  )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Last Message Status</label>
    <type>Text</type>
</CustomField>