force-app/main/default/objects/CampaignMember/fields/TwilioSF__Last_Message_Status_Date__c.field-meta.xml
<CustomField>
    <fullName>TwilioSF__Last_Message_Status_Date__c</fullName>
    <formula>IF( 
LeadId != null, 
Lead.TwilioSF__Last_Message_Status_Date__c, 
IF( 
ContactId != null, 
Contact.TwilioSF__Last_Message_Status_Date__c, 
null
) 
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Last Message Status Date</label>
    <type>Date</type>
</CustomField>